src/extension/content-script/embed/templates/html.scss
@font-face {
	font-family: 'Cambria (bold)';
	src: url('./fonts/cambria-bold.ttf');
}
@font-face {
	font-family: 'Cambria (regular)';
	src: url('./fonts/cambria-regular.ttf');
}
@font-face {
	font-family: 'Museo Sans (100)';
	src: url('./fonts/museo-sans-100.ttf');
}
@font-face {
	font-family: 'Museo Sans (500)';
	src: url('./fonts/museo-sans-500.ttf');
}
@font-face {
	font-family: 'Museo Sans (300)';
	src: url('./fonts/museo-sans-300.ttf');
}
@font-face {
	font-family: 'Museo Sans (700)';
	src: url('./fonts/museo-sans-700.ttf');
}
@font-face {
	font-family: 'Museo Sans (900)';
	src: url('./fonts/museo-sans-900.ttf');
}
html {
	overflow: hidden;
	color: #2A2326;
}
body {
	font-family: 'Museo Sans (300)';
	font-size: 13pt;
}
a {
	color: #2A2326;
}

